Add new inventory files and scripts for Cloudflare Access management
- Introduced new TSV files for access apps, tokens, and DNS inventory.
- Added scripts for managing Cloudflare Access applications, including creation, deletion, and policy management.
- Updated architecture documentation to reflect domain policies and access management strategies.
- Implemented CI workflow to enforce restrictions on using Cloudflare Pages references in the codebase.

--- a/src/admin/wrangler.toml
+++ b/src/admin/wrangler.toml
@@ -3,6 +3,11 @@ main = "index.ts"
 compatibility_date = "2025-10-07"
 compatibility_flags = ["nodejs_compat"]
 
+# Domains:
+#   prod:    admin.cloudcache.ai
+#   staging: staging-admin.cloudcache.ai
+#   preview: use staging-admin.cloudcache.ai (no Pages)
+
 [[d1_databases]]
 binding = "ADMIN_D1"
 database_name = "admin-db"
