--- a/src/app/wrangler.toml
+++ b/src/app/wrangler.toml
@@ -3,6 +3,11 @@ main = "index.ts"
 compatibility_date = "2025-10-07"
 compatibility_flags = ["nodejs_compat"]
 
+# Domains:
+#   prod:    app.cloudcache.ai
+#   staging: staging-app.cloudcache.ai
+#   preview: use staging-app.cloudcache.ai (no Pages)
+
 [[d1_databases]]
 binding = "APP_D1"
 database_name = "app-db"
