--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
 name: Deploy
 on:
   push:
@@ -49,5 +50,12 @@ jobs:
             echo "Deploying $pkg"
             bash scripts/deploy.sh "$pkg" production
           done
+
+      - name: Summary
+        run: |
+          {
+            echo "### Deploy toggles";
+            echo "- ENABLE_DEPLOY=${{ env.ENABLE_DEPLOY }}";
+          } >> "$GITHUB_STEP_SUMMARY"
 
 
