--- a/.github/workflows/secrets-scan.yml
+++ b/.github/workflows/secrets-scan.yml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
 name: Secrets Scan
 on:
   pull_request:
@@ -17,4 +18,10 @@ jobs:
         with:
           config-path: .gitleaks.toml
           fail: true
+      - name: Summary
+        run: |
+          {
+            echo "### Secrets Scan toggles";
+            echo "- ENABLE_SECRETS_SCAN=${{ env.ENABLE_SECRETS_SCAN }}";
+          } >> "$GITHUB_STEP_SUMMARY"
 
