--- a/.github/workflows/secrets-scan.yml
+++ b/.github/workflows/secrets-scan.yml
@@ -3,12 +3,9 @@ name: Secrets Scan
 on:
   pull_request:
 
-env:
-  ENABLE_SECRETS_SCAN: ${{ vars.ENABLE_SECRETS_SCAN || 'true' }}
-
 jobs:
   gitleaks:
-    if: ${{ env.ENABLE_SECRETS_SCAN != 'false' }}
+    if: ${{ vars.ENABLE_SECRETS_SCAN != 'false' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -22,6 +19,22 @@ jobs:
         run: |
           {
             echo "### Secrets Scan toggles";
-            echo "- ENABLE_SECRETS_SCAN=${{ env.ENABLE_SECRETS_SCAN }}";
+            echo "- ENABLE_SECRETS_SCAN=${{ vars.ENABLE_SECRETS_SCAN || 'true' }}";
           } >> "$GITHUB_STEP_SUMMARY"
+      - name: Save run report
+        if: always()
+        run: |
+          {
+            echo "repo=${{ github.repository }}";
+            echo "sha=${{ github.sha }}";
+            echo "workflow=${{ github.workflow }}";
+            echo "run_number=${{ github.run_number }}";
+            echo "enable_secrets_scan=${{ vars.ENABLE_SECRETS_SCAN || 'true' }}";
+          } > run-report.txt
+      - uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: Secrets-Scan-run-${{ github.run_number }}
+          path: run-report.txt
+          retention-days: 14
 
