--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,6 @@ name: CI
 on:
   pull_request:
 
-env:
-  ENABLE_CI: ${{ vars.ENABLE_CI || 'true' }}
-
 jobs:
   build:
     if: ${{ vars.ENABLE_CI != 'false' }}
@@ -25,6 +22,22 @@ jobs:
         run: |
           {
             echo "### CI toggles";
-            echo "- ENABLE_CI=${{ env.ENABLE_CI }}";
+            echo "- ENABLE_CI=${{ vars.ENABLE_CI || 'true' }}";
           } >> "$GITHUB_STEP_SUMMARY"
+      - name: Save run report
+        if: always()
+        run: |
+          {
+            echo "repo=${{ github.repository }}";
+            echo "sha=${{ github.sha }}";
+            echo "workflow=${{ github.workflow }}";
+            echo "run_number=${{ github.run_number }}";
+            echo "enable_ci=${{ vars.ENABLE_CI || 'true' }}";
+          } > run-report.txt
+      - uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: CI-run-${{ github.run_number }}
+          path: run-report.txt
+          retention-days: 14
 
