--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "format:check": "pnpm exec prettier -c .",
     "lint:quick": "pnpm exec eslint .",
     "prepare": "husky",
+    "dev": "pnpm exec concurrently -n admin,apex,app -c blue,green,yellow \"pnpm --filter ./apps/admin dev\" \"pnpm --filter ./apps/apex dev\" \"pnpm --filter ./apps/app dev\"",
+    "dev:admin": "pnpm --filter ./apps/admin dev",
+    "dev:apex": "pnpm --filter ./apps/apex dev",
+    "dev:app": "pnpm --filter ./apps/app dev",
     "deploy:staging:app": "bash scripts/modules/app/deploy-staging.sh staging",
     "deploy:staging:admin": "bash scripts/modules/admin/deploy-staging.sh staging",
     "deploy:staging:apex": "bash scripts/modules/apex/deploy-staging.sh staging",
@@ -40,7 +44,8 @@
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
     "tsup": "^8.5.0",
-    "wrangler": "^4.42.1"
+    "wrangler": "^4.42.1",
+    "concurrently": "^9.1.0"
   },
   "pnpm": {
     "overrides": {
