feat: add favicon support to apps and update TypeScript configuration to include app and package source directories

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "./tsconfig.base.json",
   "compilerOptions": {},
-  "include": ["src"],
+  "include": ["apps/**/src/**/*", "packages/**/src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
