--- a/.github/workflows/deploy-admin.yml
+++ b/.github/workflows/deploy-admin.yml
@@ -5,14 +5,14 @@ on:
     branches:
       - main
     paths:
-      - 'apps/admin/**'
-      - 'packages/**'
-      - '.github/workflows/deploy-admin.yml'
+      - "apps/admin/**"
+      - "packages/**"
+      - ".github/workflows/deploy-admin.yml"
   pull_request:
     paths:
-      - 'apps/admin/**'
-      - 'packages/**'
-      - '.github/workflows/deploy-admin.yml'
+      - "apps/admin/**"
+      - "packages/**"
+      - ".github/workflows/deploy-admin.yml"
 
 jobs:
   deploy:
@@ -21,26 +21,29 @@ jobs:
     permissions:
       contents: read
       deployments: write
-    
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      
+
       - name: Setup pnpm
         uses: ./.github/actions/setup-node-pnpm
-      
+
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
-      
+
       - name: Lint
         run: pnpm --filter @cloudcache/admin lint || echo "Lint not configured"
-      
+
       - name: Type check
         run: pnpm --filter @cloudcache/admin typecheck || echo "Typecheck not configured"
-      
+
       - name: Build
-        run: pnpm --filter @cloudcache/admin build
-      
+        run: pnpm --filter @cloudcache/admin build:bundle
+
+      - name: Verify Build Artifact
+        run: test -f apps/admin/dist/index.js || (echo "Build failed - dist/index.js not found" && exit 1)
+
       - name: Deploy to Preview
         if: github.event_name == 'pull_request'
         uses: cloudflare/wrangler-action@v3
@@ -48,11 +51,11 @@ jobs:
           apiToken: ${{ secrets.CF_API_TOKEN }}
           accountId: ${{ secrets.CF_ACCOUNT_ID }}
           workingDirectory: apps/admin
-          command: deploy --env preview
+          command: deploy --env preview --no-bundle
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
-      
+
       - name: Deploy to Staging
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         uses: cloudflare/wrangler-action@v3
@@ -60,19 +63,19 @@ jobs:
           apiToken: ${{ secrets.CF_API_TOKEN }}
           accountId: ${{ secrets.CF_ACCOUNT_ID }}
           workingDirectory: apps/admin
-          command: deploy --env staging
+          command: deploy --env staging --no-bundle
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
-      
-      - name: Smoke Tests
-        if: github.event_name == 'push'
+
+      - name: Verify Staging Deployment
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: |
-          echo "Smoke tests would run here"
-          # curl -f https://staging-admin.cloudcache.ai/healthz || exit 1
-          # curl -f https://staging-admin.cloudcache.ai/readyz || exit 1
-          # curl -f https://staging-admin.cloudcache.ai/api/v1/ping || exit 1
-      
+          echo "Verifying staging deployment..."
+          curl -f https://staging-admin.cloudcache.ai/healthz || exit 1
+          curl -f https://staging-admin.cloudcache.ai/readyz || exit 1
+          echo "✅ Staging smoke tests passed"
+
       - name: Deploy to Production
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         uses: cloudflare/wrangler-action@v3
@@ -80,9 +83,18 @@ jobs:
           apiToken: ${{ secrets.CF_API_TOKEN }}
           accountId: ${{ secrets.CF_ACCOUNT_ID }}
           workingDirectory: apps/admin
-          command: deploy
+          command: deploy --no-bundle
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
-        # Manual approval gate would be configured here in production
+        environment:
+          name: production
+          url: https://admin.cloudcache.ai
 
+      - name: Verify Production Deployment
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: |
+          echo "Verifying production deployment..."
+          curl -f https://admin.cloudcache.ai/healthz || exit 1
+          curl -f https://admin.cloudcache.ai/readyz || exit 1
+          echo "✅ Production smoke tests passed"
