--- a/.github/workflows/deploy-apex.yml
+++ b/.github/workflows/deploy-apex.yml
@@ -5,14 +5,14 @@ on:
     branches:
       - main
     paths:
-      - 'apps/apex/**'
-      - 'packages/**'
-      - '.github/workflows/deploy-apex.yml'
+      - "apps/apex/**"
+      - "packages/**"
+      - ".github/workflows/deploy-apex.yml"
   pull_request:
     paths:
-      - 'apps/apex/**'
-      - 'packages/**'
-      - '.github/workflows/deploy-apex.yml'
+      - "apps/apex/**"
+      - "packages/**"
+      - ".github/workflows/deploy-apex.yml"
 
 jobs:
   deploy:
@@ -21,26 +21,26 @@ jobs:
     permissions:
       contents: read
       deployments: write
-    
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      
+
       - name: Setup pnpm
         uses: ./.github/actions/setup-node-pnpm
-      
+
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
-      
+
       - name: Lint
         run: pnpm --filter @cloudcache/apex lint || echo "Lint not configured"
-      
+
       - name: Type check
         run: pnpm --filter @cloudcache/apex typecheck || echo "Typecheck not configured"
-      
+
       - name: Build
         run: pnpm --filter @cloudcache/apex build
-      
+
       - name: Deploy to Preview
         if: github.event_name == 'pull_request'
         uses: cloudflare/wrangler-action@v3
@@ -52,7 +52,7 @@ jobs:
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
-      
+
       - name: Deploy to Staging
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         uses: cloudflare/wrangler-action@v3
@@ -64,14 +64,15 @@ jobs:
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
-      
-      - name: Smoke Tests
-        if: github.event_name == 'push'
+
+      - name: Verify Staging Deployment
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: |
-          echo "Smoke tests would run here"
-          # curl -f https://staging-apex.cloudcache.ai/healthz || exit 1
-          # curl -f https://staging-apex.cloudcache.ai/readyz || exit 1
-      
+          echo "Verifying staging deployment..."
+          # Apex module is a Pages project - verify root endpoint is accessible
+          curl -f https://staging-apex.cloudcache.ai/ || exit 1
+          echo "✅ Staging smoke tests passed"
+
       - name: Deploy to Production
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         uses: cloudflare/wrangler-action@v3
@@ -83,5 +84,14 @@ jobs:
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
-        # Manual approval gate would be configured here in production
+        environment:
+          name: production
+          url: https://cloudcache.ai
 
+      - name: Verify Production Deployment
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: |
+          echo "Verifying production deployment..."
+          # Apex module is a Pages project - verify root endpoint is accessible
+          curl -f https://cloudcache.ai/ || exit 1
+          echo "✅ Production smoke tests passed"
