Fix duplicate function definition and corrupted favicon base64
- Remove duplicate setup_wrangler_token() function in scripts/lib/core.sh
- Fix corrupted favicon base64 in apps/app/src/index.ts
- Move core.sh sourcing before dependency checks in scripts/cloudcache
- Remove duplicate check-console.test.js file (TypeScript version .ts exists)

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 **/.env.*
 !**/.env.example
 
+# Local .env file
+.env
+.env.local
+
 # Wrangler local config files
 **/wrangler.local.toml
 **/wrangler.toml.local
