feat: enhance local development and deployment processes
- Update environment variables for Cloudflare and Shopify API credentials
- Refactor development scripts to start servers sequentially with health checks
- Improve deployment script with retry logic for better reliability
- Modify package.json scripts for streamlined development commands
- Add dynamic date and time to Cloudcache validated badge for improved visibility
- Enhance validation checks for badge display in automated tests
- Fix ESLint errors in page template (remove unused variables)
- Add workers_dev configuration to preview environments

--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsup",
     "build:bundle": "tsup",
-    "dev": "pnpm build && pnpm exec wrangler dev --port 8787 --inspector-port 9230 --no-bundle"
+    "dev": "wrangler dev --port 8787 --inspector-port 9230 --no-bundle"
   },
   "dependencies": {
     "@cloudcache/platform-env": "workspace:*",
