--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint:shell": "bash scripts/lib/validate-no-duplication.sh",
     "prepare": "husky",
     "predev": "bash scripts/dev-stop.sh",
-    "dev": "pnpm exec concurrently -n admin,apex,app -c blue,green,yellow \"pnpm --filter ./apps/admin dev\" \"pnpm --filter ./apps/apex dev\" \"pnpm --filter ./apps/app dev\"",
+    "dev": "bash scripts/dev-local.sh",
+    "build:dev": "pnpm --filter ./apps/app build:bundle && pnpm --filter ./apps/admin build:bundle && pnpm --filter ./apps/apex build:bundle",
     "dev:admin": "pnpm --filter ./apps/admin dev",
     "dev:apex": "pnpm --filter ./apps/apex dev",
     "dev:app": "pnpm --filter ./apps/app dev",
@@ -51,13 +52,13 @@
     "prettier": "^3.3.3",
     "tsup": "^8.5.0",
     "typescript-eslint": "^8.46.4",
-    "wrangler": "^4.42.1",
+    "wrangler": "^4.49.0",
     "playwright": "^1.44.1",
     "@playwright/test": "^1.44.1"
   },
   "pnpm": {
     "overrides": {
-      "wrangler": "4.42.1"
+      "wrangler": "4.49.0"
     }
   }
 }
