refactor: update pre-commit hooks and validation scripts
- Replace deprecated validation script with all-git-truth.sh for improved consistency
- Modify pre-commit hook to run all-git-truth.sh for comprehensive checks
- Update package.json to reflect new linting and validation commands
- Remove outdated documentation and scripts related to pre-commit checks
- Enhance documentation to clarify the new validation process and its usage

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "typecheck": "pnpm -r typecheck",
     "format:check": "pnpm exec prettier -c .",
     "lint:quick": "pnpm exec eslint .",
-    "lint:shell": "bash scripts/lib/validate-no-duplication.sh",
+    "lint:shell": "bash scripts/all-git-truth.sh --validate-md docs/all-git-truth.md",
     "prepare": "husky",
     "predev": "bash scripts/dev-stop.sh",
     "dev": "bash scripts/dev-local.sh",
@@ -35,7 +35,7 @@
     "*.sh": [
       "bash scripts/lint-staged-shfmt.sh",
       "bash scripts/lint-staged-shellcheck.sh",
-      "bash scripts/lib/validate-no-duplication.sh"
+      "bash scripts/all-git-truth.sh --validate-md"
     ],
     ".husky/_/*.sh": []
   },
