feat: Implement feature toggle management with D1 persistence, Cloudflare API integration, and scheduled cron jobs.

--- a/apps/app/wrangler.toml
+++ b/apps/app/wrangler.toml
@@ -2,6 +2,8 @@ name = "app-worker"
 main = "dist/index.js"
 compatibility_date = "2025-10-07"
 
+
+
 # Production routes
 routes = [
   { pattern = "app.cloudcache.ai/*", zone_name = "cloudcache.ai" }
@@ -38,3 +40,21 @@ workers_dev = true
 [[env.preview.kv_namespaces]]
 binding = "APP_KV"
 id = "58050e98476b42578f917f32582b6647"
+
+[[env.preview.d1_databases]]
+binding = "APP_D1"
+database_name = "app-db"
+database_id = "e4078d2b-2e36-454e-a6e9-994b747e4fd8"
+
+# D1 Database Binding
+
+
+# Cron Triggers
+[triggers]
+crons = ["*/15 * * * *"] # Every 15 minutes
+
+# D1 Database Binding
+[[d1_databases]]
+binding = "APP_D1"
+database_name = "app-db"
+database_id = "e4078d2b-2e36-454e-a6e9-994b747e4fd8"
