--- a/apps/apex/package.json
+++ b/apps/apex/package.json
@@ -2,12 +2,16 @@
   "name": "@cloudcache/apex",
   "private": true,
   "scripts": {
-    "build": "tsup",
-    "build:bundle": "tsup",
-    "dev": "wrangler dev --port 8788 --inspector-port 9231 --no-bundle"
+    "dev": "astro dev --port 8788",
+    "build": "astro build",
+    "build:bundle": "astro build",
+    "preview": "astro preview"
+  },
+  "dependencies": {
+    "astro": "^4.0.0",
+    "@astrojs/cloudflare": "^10.0.0"
   },
   "devDependencies": {
-    "tsup": "^8.2.2",
-    "git-rev-sync": "^3.0.2"
+    "typescript": "^5.0.0"
   }
 }
