--- a/apps/shopapp/package.json
+++ b/apps/shopapp/package.json
@@ -12,19 +12,17 @@
     "@cloudcache/platform-env": "workspace:*",
     "@cloudcache/platform-http": "workspace:*",
     "@cloudcache/platform-logging": "workspace:*",
-    "@cloudcache/platform-validate": "workspace:*",
-    "@remix-run/cloudflare": "^2.17.2",
-    "@remix-run/react": "^2.17.2",
-    "@shopify/app": "^3.58.2",
-    "@shopify/cli": "^3.87.4",
-    "@shopify/shopify-app-remix": "^4.0.6",
-    "isbot": "^5.1.32",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "@cloudcache/platform-validate": "workspace:*"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20251121.0",
+    "@remix-run/dev": "^2.17.2",
+    "@types/react": "^19.2.6",
+    "@types/react-dom": "^19.2.3",
     "git-rev-sync": "^3.0.2",
     "tsup": "^8.2.2",
-    "typescript": "^5.6.0"
+    "typescript": "^5.6.0",
+    "vite": "^7.2.4",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
