feat: Migrate shopapp to Remix with Shopify integration and update build configuration.

--- a/apps/shopapp/wrangler.toml
+++ b/apps/shopapp/wrangler.toml
@@ -1,6 +1,8 @@
 name = "shopapp-worker"
-main = "dist/index.js"
+main = "./build/server/index.js"
 compatibility_date = "2025-10-07"
+[build]
+command = "pnpm run build"
 
 
 
