--- a/apps/shopapp/package.json
+++ b/apps/shopapp/package.json
@@ -3,16 +3,26 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "tsup",
-    "build:bundle": "tsup",
-    "dev": "wrangler dev --port 8789 --inspector-port 9229 --no-bundle"
+    "build": "remix vite:build",
+    "dev": "remix vite:dev",
+    "deploy": "wrangler deploy",
+    "shopify": "shopify",
+    "typecheck": "tsc"
   },
   "dependencies": {
     "@cloudcache/platform-crypto": "workspace:*",
     "@cloudcache/platform-env": "workspace:*",
     "@cloudcache/platform-http": "workspace:*",
     "@cloudcache/platform-logging": "workspace:*",
-    "@cloudcache/platform-validate": "workspace:*"
+    "@cloudcache/platform-validate": "workspace:*",
+    "@remix-run/cloudflare": "^2.17.2",
+    "@remix-run/react": "^2.17.2",
+    "@shopify/shopify-app-remix": "^3.3.3",
+    "@shopify/app": "^3.58.2",
+    "@shopify/cli": "^3.58.2",
+    "isbot": "^5.1.21",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20251121.0",
