feat: Add new app routes, integrate Shopify App Bridge, and update build configuration.

--- a/apps/shopapp/shopify.app.toml
+++ b/apps/shopapp/shopify.app.toml
@@ -24,5 +24,13 @@ redirect_urls = [
 [webhooks]
 api_version = "2024-10"
 
+[[webhooks.subscriptions]]
+topics = ["app/uninstalled"]
+uri = "/webhooks"
+
+[[webhooks.subscriptions]]
+topics = ["shop/update"]
+uri = "/webhooks"
+
 [pos]
 embedded = false
