--- a/apps/shopapp/package.json
+++ b/apps/shopapp/package.json
@@ -17,9 +17,12 @@
     "@cloudcache/platform-validate": "workspace:*",
     "@remix-run/cloudflare": "^2.17.2",
     "@remix-run/react": "^2.17.2",
-    "@shopify/shopify-app-remix": "^3.3.3",
     "@shopify/app": "^3.58.2",
+    "@shopify/app-bridge": "^3.7.11",
+    "@shopify/app-bridge-react": "^3.7.11",
     "@shopify/cli": "^3.58.2",
+    "@shopify/polaris": "^13.9.5",
+    "@shopify/shopify-app-remix": "^3.3.3",
     "isbot": "^5.1.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
