--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "verify:ping": "bash scripts/verify/ping.sh staging",
     "shopify:scopes": "bash scripts/shopify/scopes-assert.sh",
     "cf:snapshot": "bash scripts/cf/inventory-snapshot.sh",
-    "test:validation": "bash scripts/cloudcache test deployments"
+    "cf:snapshot": "bash scripts/cf/inventory-snapshot.sh",
+    "test:validation": "bash scripts/cloudcache test deployments",
+    "switch:antigravity": "bash scripts/switch-ide.sh antigravity",
+    "switch:cursor": "bash scripts/switch-ide.sh cursor"
   },
   "lint-staged": {
     "*.{js,ts,tsx,json,md,yml,yaml}": [
