--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "prepare": "husky",
     "predev": "bash scripts/dev-stop.sh",
     "dev": "bash scripts/dev-local.sh",
-    "build:dev": "pnpm --filter @cloudcache/app build:bundle && pnpm --filter ./apps/admin build:bundle && pnpm --filter ./apps/apex build:bundle",
-    "dev:admin": "pnpm --filter ./apps/admin dev",
-    "dev:apex": "pnpm --filter ./apps/apex dev",
+    "build:dev": "pnpm --filter @cloudcache/app build:bundle && pnpm --filter ./apps/adm build:bundle && pnpm --filter ./apps/web build:bundle",
+    "dev:adm": "pnpm --filter ./apps/adm dev",
+    "dev:web": "pnpm --filter ./apps/web dev",
     "dev:app": "pnpm --filter @cloudcache/app dev",
     "deploy:preview": "bash scripts/deploy-preview.sh",
     "deploy:module": "bash scripts/deploy-module.sh",
