--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cloudcache/website",
+  "name": "@cloudcache/web",
   "private": true,
   "scripts": {
     "dev": "astro dev --port 8788",
