--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "scripts": {
     "build": "remix vite:build",
-    "dev": "remix vite:dev",
+    "build:bundle": "remix vite:build",
+    "dev": "remix vite:dev --port 8789",
     "deploy": "wrangler deploy",
     "shopify": "shopify",
     "typecheck": "tsc"
