docs: Add numerous archived task plans and update related documentation and environment configuration.

--- a/.env
+++ b/.env
@@ -14,3 +14,6 @@ CF_ACCESS_CLIENT_SECRET="1f14ad3f93c2d9590a5859f6ece6e5d2d0ffb29ef3b5bc06dff6401
 # Required for interacting with the Shopify API.
 SHOPIFY_API_KEY="17e1e21a3097e54aa56c811b477c04"
 SHOPIFY_API_SECRET="551e52f682087ac3ef935a4ea68668"
+
+# Fix for Antigravity Browser Launch
+CHROME_USER_DATA_DIR="/Users/rrokk/.gemini/antigravity-browser-profile"
